feat: public getAll de vantagem
