# sistema/backend/src/main/java/br/edu/pucminas/sistema_moeda_estudantil/model/domain/boundary/VantagemBoundary.java
@@ -15,4 +15,6 @@ public interface VantagemBoundary {
     void deleteVantagem(UUID empresaId, UUID vantagemId);
 
     VantagemDTO updateVantagem(UUID empresaId, UUID vantagemId, VantagemDTO vantagemDTO);
+
+    List<VantagemDTO> listAllVantagens();
 }
